--- a/package.json
+++ b/package.json
@@ -1,17 +1,32 @@
 {
-    "name": "01-node-ecosystem",
-    "version": "0.0.1",
-    "description": "this will be sooooo cool",
-    "main": "index.js",
-    "scripts": {
-      "test": "jest --verbose --coverage",
-      "lint": "eslint '**/*.js'"
-    },
-    "author": "",
-    "license": "ISC",
-    "dependencies": {
-      "eslint": "^6.1.0",
-      "eslint-plugin-react": "^7.14.3",
-      "jest": "^24.8.0"
-    }
-  }
+  "name": "401",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "directories": {
+    "lib": "lib"
+  },
+  "dependencies": {
+    
+    
+   
+    
+    
+    
+  },
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/bayanmhmd/Lab1.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/bayanmhmd/Lab1/issues"
+  },
+  "homepage": "https://github.com/bayanmhmd/Lab1#readme"
+}
