--- a/package.json
+++ b/package.json
@@ -10,8 +10,20 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "eslint": "^6.1.0",
+    "eslint": "^6.8.0",
     "eslint-plugin-react": "^7.14.3",
     "jest": "^24.9.0"
-  }
+  },
+  "directories": {
+    "lib": "lib"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/bayanmhmd/Lab1.git"
+  },
+  "keywords": [],
+  "bugs": {
+    "url": "https://github.com/bayanmhmd/Lab1/issues"
+  },
+  "homepage": "https://github.com/bayanmhmd/Lab1#readme"
 }
